--- a/trunk/Readme/Readme_rus.html
+++ b/trunk/Readme/Readme_rus.html
@@ -27,13 +27,13 @@ Brought to you by Krom and Lewin</font></P>
 		<tr>
 			<td>
 	<img border="0" src="Readme/GUI_0318.gif"></td>
-			<td><b><font size="+2" face="Calibri">&nbsp;<a name="Description">Описание</a></font></b</td>
+			<td><b><font size="+2" face="Calibri">&nbsp;<a name="Description">Описание</a></font></b></td>
 		</tr>
 	</table>
 </blockquote>
 <p><font face="Calibri">KaM Remake (мы еще не придумали красивое название) - это попытка оживить оригинальную стратегическую игру &quot;Knights and Merchants: The Shattered Kingdom&quot; (далее просто &quot;КаМ&quot;). Наши цели - сделать игру работоспособной на современных компьютерах, а также исправить множество ошибок в движке игры. Для того чтобы это сделать мы начали &quot;с нуля&quot; писать свой движок, полагаясь на оригинальные файлы ресурсов игры. Это наша публичная технологическая демо-версия, показывающая экономическую и военную стороны игры, далее называемая &quot;игра&quot; или &quot;KaM Remake&quot;. Наша цель продемонстрировать потенциал и получить отклик по функциональности игры. Все использованные ресурсы взяты из КаМ (графика, музыка, звуки, и т.п.) и используются только для разработки и отладки. Финальная версия не будет включать в себя никаких защищенных авторских ресурсов.<br>
 Мы полагаем, что у Вы обладаете лицензионной версией КаМ, иначе вам следует ее приобрести - ее можно купить в ряде он-лайн магазинов.<br>
-Исполняемый файл KaM Remake доступен для свободного распространения и сделан энтузиастами. Использованные приложения: Delphi 6, Delphi 7, FastMM4, Lazarus, OpenGL, OpenAL, zLib, PNGImage.</font><BR>&nbsp;</p>
+Исполняемый файл KaM Remake доступен для свободного распространения и сделан энтузиастами. Использованные приложения: Delphi 6, Delphi 7, FastMM4, Lazarus, LNet, OpenGL, OpenAL, Overbyte ICS, PNGImage, zLib.</font><BR>&nbsp;</p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -60,8 +60,8 @@ Brought to you by Krom and Lewin</font></P>
 	</table>
 </blockquote>
 <p><font face="Calibri">
-<b>1.</b> Распакуйте все файлы содержащиеся в архиве в новую папку на Вашем компьютере.<br>
-<b>2.</b> Архив включает в себя аудио драйвера OpenAL (<b>oalinst.exe</b>), которые Вам также следует установить, для игры в KaM Remake. Свежую версию драйверов Вы можете скачать с официального сайта OpenAL:
+<b>1.</b> Запустите мастер установки игры и следуйте его инструкциям.<br>
+<b>2.</b> Мастер установки также включает в себя аудио драйвера OpenAL (<b>oalinst.exe</b>), которые вам также следует установить, для игры в KaM Remake. Свежую версию драйверов Вы можете скачать с официального сайта OpenAL:
 <a href="http://connect.creativelabs.com/openal/default.aspx">
 http://connect.creativelabs.com/openal/default.aspx</a> <br>
 <b>3.</b> KaM Remake использует OpenGL для вывода графики, так что Вам также может потребоваться установить последние графический драйвера, от производителя вашей видео-карты.<br>
@@ -87,14 +87,15 @@ http://connect.creativelabs.com/openal/default.aspx</a> <br>
 <b>Пробел</b> перейти к месту события открытого сообщения<br>
 <b>&#8592;&#8593;&#8594;&#8595;</b> курсорные кнопки используются для перемещения по карте<br>
 <b>Колесико мыши</b> увеличивает и уменьшает масштаб<br>
-<b>&#8592;</b> backspace установит масштаб обратно на  100%<br>
-<b>Щелчок средней кнопкой мыши</b> поместит конного разведчика под курсором, что позволит Вам исследовать карту<br>
+<b>&#8592;</b> backspace установит масштаб обратно на 100%<br>
 </font></p>
-<p><font face="Calibri"><B>Установка дополнительных карт:</B><br><B>1.</B> Cоздайте новую папку в папке &quot;KaM Remake\Maps&quot; и назовите по имени Вашей карты (например &quot;Моя Карта&quot;).<br>
+<p><font face="Calibri"><B>Установка дополнительных карт:</B><br>
+<B>1.</B> Cоздайте новую папку в папке &quot;KaM Remake\Maps&quot; и назовите по имени Вашей карты (например &quot;Моя Карта&quot;).<br>
 <B>2.</B> Поместить в созданную папку файлы карты (назвав их соответственно &quot;Моя Карта.dat&quot; и &quot;Моя Карта.map&quot;) имена файлов должны совпадать с именем папки!.<br>
 <B>3.</B> Вы также можете создать дополнительный файл &quot;МояКарта.txt&quot; содержащий описание миссии и другую информацию. Для шаблона используйте подобные файлы из миссии Ремейка. Оффицальная информация о формате пока недоступна, так как в будущем формат может быть изменен.</font></p>
 <p><font face="Calibri"><b>Добавление собственной музыки:</b><br>
-Вы можете скопировать ваши MP3 файлы в папку &quot;KaM Remake\Music&quot; и они будут автоматически добавлены в плейлист.<br>&nbsp;</font></p>
+Вы можете скопировать ваши MP3 файлы в папку &quot;KaM Remake\Music&quot; и они будут автоматически добавлены в список воспроизведения.<br>
+&nbsp;</font></p>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -109,9 +110,10 @@ http://connect.creativelabs.com/openal/default.aspx</a> <br>
 KaM Remake вылетает без каких-либо сообщений загрузки или при смене саундтрека, если есть проблема со звуковой подсистемой Windows. Удаление папки &quot;Music&quot; из KaM Remake исправляет эту ошибку.<br></p>
 <p><B>Низкая частота смены кадров:</B><br>
 Если у Вас в игре низкая частота смены кадров, это может быть вызвано старыми или отсутствующими драйверами OpenGL. Проверьте Вашу версию OpenGL драйверов, посмотрев в главном меню в верхний левый угол, версия должна быть как минимум 1.4.x. Если она ниже то необходимо обновить драйвера вашей карты (драйвера можно скачать на сайте производителя).<br></p>
-<p><B>Ошибки:</B><br>Иногда, когда в игре случается что-то непредвиденное, вы увидите ошибку типа &quot;<i>An error has occoured during gameplay</i>&quot;. Please read the message details and send the crash report ZIP file from the Crash Reports folder by email either to Крому (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) или Левину (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) с описанем того что Вы делали в игре, что могло привести к ошибке, а также любую другую информацию, которую сочтете относящейся к делу. Наличие этих файлов поможет нам исправить ошибку.<br></p>
+<p><B>Ошибки:</B><br>
+Иногда, когда в игре случается что-то непредвиденное, вы увидите ошибку типа &quot;<i>An error has occoured during gameplay</i>&quot;. Please read the message details and send the crash report ZIP file from the Crash Reports folder by email to <a href="mailto:contact@kamremake.com">contact@kamremake.com</a> с описанем того что Вы делали в игре, что могло привести к ошибке, а также любую другую информацию, которую сочтете относящейся к делу. Наличие этих файлов поможет нам исправить ошибку.<br></p>
 <p><B>Ошибки &quot;Assertion failed&quot;:</B><br>
-Иногда, когда в игре случается что-то непредвиденное, вы увидите ошибку типа &quot;Assertion failed&quot;. В этом случае Вам следует остановить процесс KaM Remake через менеджер задач (нажмите Ctrl+Alt+Del, выберете KaM Remake и нажмите кнопку "остановить процесс"). Далее, откройте папку в которую был установлен KaM Remake и найдите файл &quot;KaM.log&quot; - в нем содержится дополнительная информация об ошибке. Пожалуйста отправьте этот файл Крому (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>) или Левину (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>) с описанем того что Вы делали в игре, что могло привести к ошибке, а также любую другую информацию, которую сочтете относящейся к делу. По возможности приложите файлы с реплеем, как описано в предедущем пункте.</font><br>&nbsp;</P>
+Иногда, когда в игре случается что-то непредвиденное, вы увидите ошибку типа &quot;Assertion failed&quot;. В этом случае Вам следует остановить процесс KaM Remake через менеджер задач (нажмите Ctrl+Alt+Del, выберете KaM Remake и нажмите кнопку "остановить процесс"). Далее, откройте папку в которую был установлен KaM Remake и найдите файл &quot;KaM.log&quot; - в нем содержится дополнительная информация об ошибке. Пожалуйста отправьте этот файл на <a href="mailto:contact@kamremake.com">contact@kamremake.com</a> с описанем того что Вы делали в игре, что могло привести к ошибке, а также любую другую информацию, которую сочтете относящейся к делу. По возможности приложите файлы с реплеем, как описано в предедущем пункте.</font><br>&nbsp;</P>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
@@ -123,7 +125,6 @@ KaM Remake вылетает без каких-либо сообщений загрузки или при смене саундтрека, 
 </blockquote>
 <p><font face="Calibri">
 Тренировка юнитов в Town Hall не работает.<br>
-Войска из дополнения TPR пока не поддерживаются.<br>
 Поведение ИИ сильно ограничено.<br>
 &nbsp;</font></p>
 <blockquote>
@@ -137,10 +138,10 @@ KaM Remake вылетает без каких-либо сообщений загрузки или при смене саундтрека, 
 </blockquote>
 <font face="Calibri">Включает исполняемые программы для мультиплеер выделенного сервера, которые работают на Windows и Linux x86 и x86_64. Для соединения сервер использует TCP порт 56789 и работает как концентратор, обеспечивая передачу данных между клиентами. Выделенный сервер не «понимает» геймплей, он просто передает пакеты данных между клиентами. Первому игроку, который соединится с сервером будут даны права хоста и он сможет менять настройки игры. Если первый игрок отключается, то права хоста автоматически передаются следующему игроку по порядку в списке.<br>
 Чтобы использовать игру в LAN, запустите выделенный сервер и убедитесь, что он запущен правильно (должно быть написано «Listening on port 56789»). Убедитесь, что ваш firewall не блокирует работу программы, открыть TCP порт 56789. Тогда вы можете присоединиться с того же самого компьютера и/или других компьютеров. (Для того же самого компьютера соединитесь с адресом 127.0.0.1 или localhost)<br>
-Чтобы использовать в интернете, вы должны перенаправить порт 56789 от Вашего маршрутизатора до Вашего PC, на котором запущен выделенный сервер. (для получения дополнительной информации о перенаправлении портов, посетите <a href="http://portforward.com/">http://portforward.com/</a>) Скажите свой внешний IP адрес друзьям, которые к вам присоединятся. IP адрес отображается на странице <a href="http://portforward.com/">http://portforward.com/</a>. Если вы играете на том же самом компьютере, на котором запущен выделенный сервер, или в той же самой LAN, то подключайтесь к этому IP-адресу, как вы бы сделали для игры по LAN.
-
-<br><br>
-Примечание: Выделенный сервер не является обязательным для игры в мультиплеер. Нажатие кнопки «Создать сервер» в меню сетевой игры имеет такой же эффект, за исключением того, что вы и сами должны будете принять участие в игре. Выделенный сервер нужен в том случае, если вы хотите создать сервер, но не принимать участие в игре. Основное назначение выделенного сервера является возможность его круглосуточной работы, семь дней в неделю, во время которой игроки могут присоединиться и участвовать в игре в любой момент, когда им хочется. Если вы в состоянии поддерживать работу выделенного сервера, то расскажите об этом фанатам игры, указав свой IP адрес. Будущие версии будут включать "мастер сервер", который будет отображать список всех запущенных публичных серверов и позволит вам присоединиться к ним без необходимости вводить IP-адреса.<br><br>
+Чтобы использовать в интернете, вы должны перенаправить порт 56789 от Вашего маршрутизатора до Вашего PC, на котором запущен выделенный сервер. (для получения дополнительной информации о перенаправлении портов, посетите <a href="http://portforward.com/">http://portforward.com/</a>) Скажите свой внешний IP адрес друзьям, которые к вам присоединятся. IP адрес отображается на странице <a href="http://portforward.com/">http://portforward.com/</a>. Если вы играете на том же самом компьютере, на котором запущен выделенный сервер, или в той же самой LAN, то подключайтесь к этому IP-адресу, как вы бы сделали для игры по LAN.<br>
+<br>
+Примечание: Выделенный сервер не является обязательным для игры в мультиплеер. Нажатие кнопки «Создать сервер» в меню сетевой игры имеет такой же эффект, за исключением того, что вы и сами должны будете принять участие в игре. Выделенный сервер нужен в том случае, если вы хотите создать сервер, но не принимать участие в игре. Основное назначение выделенного сервера является возможность его круглосуточной работы, семь дней в неделю, во время которой игроки могут присоединиться и участвовать в игре в любой момент, когда им хочется. Если вы в состоянии поддерживать работу выделенного сервера, то расскажите об этом фанатам игры, указав свой IP адрес. Будущие версии будут включать "мастер сервер", который будет отображать список всех запущенных публичных серверов и позволит вам присоединиться к ним без необходимости вводить IP-адреса.<br>
+<br>
 Linux версия была проверена на Fedora и Ubuntu. Любые вопросы или комментарии относительно версии под Linux следует направлять по адресу Левина. (<ahref="mailto:lewinjh@gmail.com"> lewinjh@gmail.com</a>)</font>
 <br>&nbsp;
 <blockquote>
@@ -167,7 +168,7 @@ Linux версия была проверена на Fedora и Ubuntu. Любые вопросы или комментарии от
 </blockquote>
 <p><font face="Calibri">Исходные коды KaM Remake доступны по адресу:<br>
 <a href="http://code.google.com/p/castlesand">http://code.google.com/p/castlesand</a><br>
-Мы призываем Вас сообщать о найденных ошибках используя встроенный интерфейс:<br>
+Мы призываем Вас сообщать нам о найденных ошибках используя встроенный интерфейс:<br>
 <a href="http://code.google.com/p/castlesand/issues/entry">http://code.google.com/p/castlesand/issues/entry</a><br>
 </font><br>&nbsp;</p>
 <blockquote>
@@ -183,8 +184,8 @@ Linux версия была проверена на Fedora и Ubuntu. Любые вопросы или комментарии от
 <font face="Calibri">Ведущий программист - Krom (<a href="mailto:kromster80@gmail.com">kromster80@gmail.com</a>)<br>
 Программист - Lewin (<a href="mailto:lewinjh@gmail.com">lewinjh@gmail.com</a>)<br>
 Особая благодарность Александру, который написал ядро структуры кода в 2008 г<br>
-Спасибо StarGazer, который нарисовал новые курсоры и иконки для интерфейса<br>
-Огромное спасибо сообществу КаМ и его активным членам (Free_sms_kam, Harold, JBSnorro, The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf и многим другим), которые помогли нам с декодированием, советами, идеями и поддержкой.<br>&nbsp;</font>
+Спасибо StarGazer, который нарисовал Рынок, новые курсоры и иконки для интерфейса<br>
+Огромное спасибо сообществу КаМ и его активным членам (Free_sms_kam, Harold, Humbelum, JBSnorro, The Knight, Litude (Real Hotdog), Merchator, Nick, Thunderwolf, Vas и многим другим), кто помогал нам с декодированием, советами, идеями и поддержкой.<br>&nbsp;</font>
 <blockquote>
 	<table border="0" cellspacing="0" cellpadding="0">
 		<tr>
